Fixed some styling issues on mobile

--- a/scss/theme/_custom.scss
+++ b/scss/theme/_custom.scss
@@ -55,11 +55,11 @@
 
 .cd-top {
   display: inline-block;
-  height: 40px;
-  width: 40px;
+  height: 60px;
+  width: 60px;
   position: fixed;
-  bottom: 40px;
-  right: 10px;
+  bottom: 70px;
+  right: 70px;
   -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   /* image replacement properties */
@@ -98,18 +98,18 @@
   opacity: 1;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .cd-top {
-    right: 20px;
-    bottom: 20px;
+    height: 40px;
+    width: 40px;
+    right: 50px;
+    bottom: 50px;
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 575px) {
   .cd-top {
-    height: 60px;
-    width: 60px;
-    right: 30px;
-    bottom: 30px;
+    right: 20px;
+    bottom: 20px;
   }
 }
